# mocap_optitrack

./: CMakeLists.txt  README.md  package.xml
config/: mocap.yaml
include/mocap_optitrack/: data_model.h  free_marker_publisher.h  mocap_config.h  rigid_body_publisher.h  socket.h
launch/: mocap.launch
msg/: PointArrayStamped.msg
src/: CMakeLists.txt  data_model.cpp  free_marker_publisher.cpp  mocap_config.cpp  mocap_node.cpp  rigid_body_publisher.cpp  socket.cpp
src/natnet/: natnet_messages.cpp  natnet_messages.h
