<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mocap_optitrack</name>
  <version>0.1.2</version>
  <description>
    Streaming of OptiTrack mocap data to tf
    <p>
    This package contains a node that translates motion capture data from an
    OptiTrack rig to tf transforms, poses and 2D poses. The node receives
    packets that are streamed by a NatNet compliant source, decodes them and
    broadcasts the poses of configured rigid bodies as tf transforms, poses,
    and/or 2D poses.
    </p>
    <p>
    Currently, this node supports the NatNet streaming protocol v3.0 and has been
    modified to include streaming of free markers.
    </p>
    <p>
    Copyright (c) 2021, Florian Mahlknecht<br/>
    Copyright (c) 2021, Joseph Lorenzetti<br/>
    Copyright (c) 2013, Clearpath Robotics<br/>
    Copyright (c) 2010, University of Bonn, Computer Science Institute VI<br/>
    All rights reserved.
    </p>
  </description>
  <maintainer email="tony@baltovski.ca">Tony Baltovski</maintainer>
  <author email="graeve@ais.uni-bonn.de">Kathrin Gräve</author>
  <author email="abencz@clearpathrobotics.com">Alex Bencz/</author>
  <author email="tony@baltovski.ca">Tony Baltovski</author>
  <author email="jyamokoski@houstonmechatronics.com">JD Yamokoski</author>
  <author email="jlorenze@stanford.edu">Joseph Lorenzetti</author>
  <author email="florianm@stanford.edu">Florian Mahlknecht</author>
  <author email="vinnam.kim@samsung.com">Vinnam Kim</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/mocap_optitrack</url>
  <url type="repository">https://github.com/StanfordASL/mocap_optitrack</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <build_export_depend>geometry_msgs</build_export_depend>
<!--  <build_export_depend>nav_msgs</build_export_depend>-->
  <build_export_depend>dynamic_reconfigure</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
